{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 50,
  "lineage": "91587d23-7e14-1280-ab0d-811005144ab0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:405287211881:security-group/sg-0a42037d33cba79ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a42037d33cba79ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "106.222.211.144/32"
                ],
                "description": "Allow Jenkins Web UI (port 8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "106.222.211.144/32"
                ],
                "description": "Allow SSH from admin IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "405287211881",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc94f67144ad7ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "405287211881",
            "id": "sg-0a42037d33cba79ba",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.http.my_ip",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:405287211881:internet-gateway/igw-05607b982ef776f41",
            "id": "igw-05607b982ef776f41",
            "owner_id": "405287211881",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-demo-igw"
            },
            "tags_all": {
              "Name": "terraform-demo-igw"
            },
            "vpc_id": "vpc-09cc94f67144ad7ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:405287211881:route-table/rtb-052450052b834dcdb",
            "id": "rtb-052450052b834dcdb",
            "owner_id": "405287211881",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05607b982ef776f41",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-demo-public-rt"
            },
            "tags_all": {
              "Name": "terraform-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc94f67144ad7ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "405287211881",
            "id": "rtb-052450052b834dcdb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4cec135c070d838",
            "region": "ap-south-1",
            "route_table_id": "rtb-052450052b834dcdb",
            "subnet_id": "subnet-07a4595ce5a7ece79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:405287211881:subnet/subnet-021ea1228f50e6743",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021ea1228f50e6743",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405287211881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-demo-private"
            },
            "tags_all": {
              "Name": "terraform-demo-private"
            },
            "vpc_id": "vpc-09cc94f67144ad7ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "405287211881",
            "id": "subnet-021ea1228f50e6743",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:405287211881:subnet/subnet-07a4595ce5a7ece79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a4595ce5a7ece79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405287211881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-demo-public"
            },
            "tags_all": {
              "Name": "terraform-demo-public"
            },
            "vpc_id": "vpc-09cc94f67144ad7ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "405287211881",
            "id": "subnet-07a4595ce5a7ece79",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:405287211881:vpc/vpc-09cc94f67144ad7ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a7de490f9e34f65a",
            "default_route_table_id": "rtb-0d6d25da1afc94e36",
            "default_security_group_id": "sg-0d2c13c5e1f36f103",
            "dhcp_options_id": "dopt-06b9ce0226d5c1490",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cc94f67144ad7ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6d25da1afc94e36",
            "owner_id": "405287211881",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-demo-vpc"
            },
            "tags_all": {
              "Name": "terraform-demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "405287211881",
            "id": "vpc-09cc94f67144ad7ee",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}